Some scaling + nav collapse fixes

--- a/css/scaling.css
+++ b/css/scaling.css
@@ -21,7 +21,7 @@
      .hw-quote {
    font-family: 'playfair_displaybold_italic', serif;
    text-align: center;
-   margin-left: -10px;
+   margin-left: -20px;
    font-size: 4em !Important;
 }
      
